Fix mobile gaps retardedly

--- a/www/assets/_layout.scss
+++ b/www/assets/_layout.scss
@@ -65,10 +65,16 @@ body {
         display: flex;
     }
 
-    #grail,
+    body {
+        gap: 0;
+    }
+
     header,
     footer {
         padding: $gaps;
+    }
+    #grail {
+        padding: 0 $gaps;
     }
 
     #logo {
